--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                 <h2>matheus menezes</h2>
                 <p>desenvolvedor web</p>
                 <ul>
-                    <li><i class="fab fa-linkedin-in"></i></li>
-                    <li><i class="fab fa-github-alt"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
+                    <li><a href="https://www.linkedin.com/in/matheus-menezes-dourado/"><i
+                                class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://github.com/matheus-mmd"><i class="fab fa-github-alt"></i></a></li>
+                    <li><a href="https://www.instagram.com/_menesesmmd/"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </section>
@@ -148,11 +149,14 @@
                 <div></div>
             </div>
         </section>
-        <form action="https://hotmail.us1.list-manage.com/subscribe/post?u=38dd5213f227721624869c855&amp;id=a2a52cb547" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate > 
+        <form action="https://hotmail.us1.list-manage.com/subscribe/post?u=38dd5213f227721624869c855&amp;id=a2a52cb547"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate>
             <i class="fas fa-mobile-alt"></i>
             <h2>contato</h2>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_38dd5213f227721624869c855_a2a52cb547" tabindex="-1" value=""></div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                    name="b_38dd5213f227721624869c855_a2a52cb547" tabindex="-1" value=""></div>
             <div class="areaContato">
                 <div>
                     <input type="text" name="FNAME" id="FNAME" placeholder="Nome">
@@ -164,9 +168,9 @@
         </form>
         <footer>
             <ul>
-                <li><i class="fab fa-linkedin-in"></i></li>
-                <li><i class="fab fa-github-alt"></i></li>
-                <li><i class="fab fa-instagram"></i></li>
+                <li><a href="https://www.linkedin.com/in/matheus-menezes-dourado/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://github.com/matheus-mmd"><i class="fab fa-github-alt"></i></a></li>
+                <li><a href="https://www.instagram.com/_menesesmmd/"><i class="fab fa-instagram"></i></a></li>
             </ul>
         </footer>
     </div>
@@ -174,4 +178,3 @@
 </body>
 
 </html>
-
