atualização das fotos

--- a/index.html
+++ b/index.html
@@ -141,12 +141,8 @@
 
             <h2>portfolio</h2>
             <div class="portfolio">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div><img src="celular.gif" alt="celular"></div>
+                <div><img src="tela3.gif" alt="tela"></div>
             </div>
         </section>
         <form action="https://hotmail.us1.list-manage.com/subscribe/post?u=38dd5213f227721624869c855&amp;id=a2a52cb547"
